test/k8sT/manifests/fqdn-proxy-multiple-specs.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "fqdn-proxy-policy.yaml"
metadata:
  name: "fqdn-proxy-policy.yaml"
specs:
- egress:
  - toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchPattern: "vagrant-cache.ci.cilium.io"
  endpointSelector:
    matchLabels:
      id: app2
- egress:
  - toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchPattern: "jenkins.cilium.io"
  endpointSelector:
    matchLabels:
      id: app3
